--- a/pwnedpasswords/pwnedpasswords.csproj
+++ b/pwnedpasswords/pwnedpasswords.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Version>0.0.1</Version>
+    <Product>PwnedPasswords</Product>
+    <Copyright>© 2020</Copyright>
   </PropertyGroup>
 
 </Project>
