--- a/pwnedpasswords/pwnedpasswords.csproj
+++ b/pwnedpasswords/pwnedpasswords.csproj
@@ -8,4 +8,10 @@
     <Copyright>© 2020</Copyright>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="LICENSE.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
